myapp-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo  # StatefulSet name for MongoDB
spec:
  serviceName: "mongo"  # Name of the service associated with this StatefulSet
  replicas: 1  # Number of MongoDB replicas
  selector:
    matchLabels:
      app: mongo  # Label selector for pods
  template:
    metadata:
      labels:
        app: mongo  # Labels for the pods
    spec:
      containers:
        - name: mongo  # Container name
          image: mongo:latest  # MongoDB Docker image
          ports:
            - containerPort: 27017  # MongoDB port
          volumeMounts:
            - name: mongo-persistent-storage  # Mount persistent storage
              mountPath: /data/db  # Path inside the container for MongoDB data
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage  # Name of the persistent volume claim
      spec:
        accessModes: ["ReadWriteOnce"]  # Access mode for the volume
        resources:
          requests:
            storage: 1Gi  # Requested storage size for MongoDB data
