myapp-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: myapp
